# ray-tracing

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  camera.cpp  render_world.cpp  sphere.cpp
.github/workflows/: .pre-commit-config.yaml  ci.yaml  pcm.yaml
include/: bounding_box.hpp  box.hpp  camera.hpp  dump_png.hpp  hierarchy.hpp  light.hpp  misc.hpp  point_light.hpp  ray.hpp  reflective_shader.hpp  render_world.hpp  shaders.hpp  types.hpp  vec.hpp
include/acceleration_structures/: bounding_box.hpp  box.hpp  hierarchy.hpp
include/lights/: direction_light.hpp  light.hpp  point_light.hpp  spot_light.hpp
include/objects/: mesh.hpp  object.hpp  plane.hpp  sphere.hpp
include/shaders/: flat_shader.hpp  phong_shader.hpp  reflective_shader.hpp  refractive_shader.hpp  shader.hpp
src/: CMakeLists.txt  box.cpp  camera.cpp  hierarchy.cpp  light.cpp  lights.cpp  main.cpp  mesh.cpp  parse.cpp  phong_shader.cpp  plane.cpp  reflective_shader.cpp  render_world.cpp  shaders.cpp  sphere.cpp
src/acceleration_structures/: box.cpp  hierarchy.cpp
src/objects/: mesh.cpp  plane.cpp  sphere.cpp
src/shaders/: flat_shader.cpp  phong_shader.cpp  reflective_shader.cpp  refractive_shader.cpp  shader.cpp
tools/: CMakeLists.txt
tools/benchmark/: CMakeLists.txt
tools/benchmark/include/: hierarchy_bench.hpp
tools/benchmark/source/: main.cpp
tools/common/: CMakeLists.txt  dump_mp4.cpp  dump_mp4.hpp  dump_png.cpp  dump_png.hpp  parse.cpp  parse.hpp
tools/demos/: CMakeLists.txt
tools/demos/image/: CMakeLists.txt  main.cpp
tools/demos/video/: CMakeLists.txt  main.cpp
tools/test/: CMakeLists.txt
tools/test/cases/: 13.txt  28.txt  29.txt  30.txt  CMakeLists.txt
tools/test/configs/: CMakeLists.txt  directories.hpp.in
tools/test/include/: test_file.hpp
tools/test/objects/: CMakeLists.txt
tools/test/outputs/: CMakeLists.txt
tools/test/source/: main.cpp
